--- a/dom builder.html
+++ b/dom builder.html
@@ -4,20 +4,27 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>ButtonBuilder</title>
-    <link type="text/css" href="file:///F|/web dev/web dev 4/Dom builder project/dom builder.css" rel="stylesheet" />
-    <script type="text/javascript" src="file:///F|/web dev/web dev 4/Dom builder project/jquery-1.11.2.js"></script>
-    <script type="text/javascript" src="file:///F|/web dev/web dev 4/Dom builder project/jquery-ui-1.11.4.custom/jquery-ui.js"></script>
-    <script type="text/javascript" src="file:///F|/web dev/web dev 4/Dom builder project/dom builder.js"></script>
-    <script type="text/javascript" src="Attached-jquery.ui-/jquery-ui.css"></script>
+    <img src="../button_builder_body.png">
+    <script type="text/javascript" src="jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="Attached-jquery.ui-/jquery-ui.js"></script>
+    <script type="text/javascript" src="dom builder.js"></script>
+    <link type="text/css" href="Attached-jquery.ui-/jquery-ui.css" />
+   <link type="text/css" href="dom builder.css" />
+   
 </head>
 
 <body>
-    <div id="container">
 
+    <div id="container">
+            <div id="Header Move">
+				<div id="flip">Click Here</div>
+					<div id="panel">Header</div>
+                    </div>
         <div id="buttonBody">
 
             <div id="square">Square</div>
 				<div id="slider"></div>
+                
             <div id="buttonControl">
                 
                 <button id="buttonType">Font</button>
