--- a/dom builder.html
+++ b/dom builder.html
@@ -4,26 +4,26 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>ButtonBuilder</title>
-    <img src="../button_builder_body.png">
+
     <script type="text/javascript" src="jquery-1.11.2.js"></script>
     <script type="text/javascript" src="Attached-jquery.ui-/jquery-ui.js"></script>
     <script type="text/javascript" src="dom builder.js"></script>
-    <link type="text/css" href="Attached-jquery.ui-/jquery-ui.css" />
-   <link type="text/css" href="dom builder.css" />
+    <link type="text/css" rel="stylesheet" href="Attached-jquery.ui-/jquery-ui.css" />
+	<link type="text/css" rel="stylesheet" href="dom builder.css" />
    
 </head>
 
 <body>
 
-    <div id="container">
-            <div id="Header Move">
-				<div id="flip">Click Here</div>
-					<div id="panel">Header</div>
-                    </div>
+	<div id="container">
+        <div id="Header Move">
+			<div id="flip">Click Here</div>
+			<div id="panel">Header</div>
+        </div>
         <div id="buttonBody">
 
             <div id="square">Square</div>
-				<div id="slider"></div>
+			<div id="slider"></div>
                 
             <div id="buttonControl">
                 
