--- a/dom builder.html
+++ b/dom builder.html
@@ -34,7 +34,7 @@
 
             </div>
             
-            		<ul><li id="draggable" class="ui-state-highlight">Drag me down</li></ul>
+            		<ul><li id="draggable" class="ui-state-highlight">Drag The List</li></ul>
             		<ul id="sortable">
                               <li class="ui-state-default">Move this</li>
                               <li class="ui-state-default">Move this too</li>
