Attached spectrum files
downloaded and attached spectrum library to use for colour picker

--- a/dom builder.html
+++ b/dom builder.html
@@ -4,19 +4,20 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>ButtonBuilder</title>
-
-    <script type="text/javascript" src="jquery-1.11.2.js"></script>
-    <script type="text/javascript" src="Attached-jquery.ui-/jquery-ui.js"></script>
-    <script type="text/javascript" src="dom builder.js"></script>
+ <link type="text/css" rel="stylesheet" href="bgrins-spectrum-a7bb45b/spectrum.css" />
     <link type="text/css" rel="stylesheet" href="Attached-jquery.ui-/jquery-ui.css" />
 	<link type="text/css" rel="stylesheet" href="dom builder.css" />
+    <script type="text/javascript" src="jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="bgrins-spectrum-a7bb45b/spectrum.js"></script>
+    <script type="text/javascript" src="bgrins-spectrum-a7bb45b/Gruntfile.js"></script>
+    <script type="text/javascript" src="Attached-jquery.ui-/jquery-ui.js"></script>
+    <script type="text/javascript" src="dom builder.js"></script>
+   
    
 </head>
 
 <body>
-
 	<div id="container">
-       
         <div id="buttonBody">
              <!--<div id="Header Move">
 				<div id="flip">Click Here</div>
